doc: update GPU manual to clean up old mistake

--- a/docs/source/how-tos/GPU and Exascale Computing.ipynb
+++ b/docs/source/how-tos/GPU and Exascale Computing.ipynb
@@ -35,11 +35,11 @@
     "\n",
     "from prysm.mathops import np, ndimage, interpolate, special, fft\n",
     "\n",
-    "np.__src = cp\n",
-    "ndimage.__src = cpndimage\n",
-    "special.__src = cpspecial\n",
-    "interpolate.__src = cpinterpolate\n",
-    "fft.__src = cpfft\n",
+    "np._srcmodule = cp\n",
+    "ndimage._srcmodule = cpndimage\n",
+    "special._srcmodule = cpspecial\n",
+    "interpolate._srcmodule = cpinterpolate\n",
+    "fft._srcmodule = cpfft\n",
     "```\n",
     "\n",
     "From this point on, any computation within prysm will be done on the GPU.\n",
