--- a/docs/source/how-tos/GPU and Exascale Computing.ipynb
+++ b/docs/source/how-tos/GPU and Exascale Computing.ipynb
@@ -73,15 +73,13 @@
     "\n",
     "## Sense of Capacity\n",
     "\n",
-    "As a general sense of how fast prysm can be, multi-plane diffraction models can be run at about 1ms per plane per wavelength at a total size of 1024x1024 samples, using a Titan XP GPU.  The same model runs in about 50 ms per plane on a dual intel xeon 6248R platform.  The polychromatic model can be made to run at an aggregate time of 60 ms for 9 wavelengths on the GPU and 250 ms for CPU, utilizing all available cores with optimum tuning via threadpoolctl and a ThreadPoolExecutor.\n",
-    "\n",
-    "It is expected that the time could be reduced to about 200 usec per plane on a more powerful GPU, such as the instinct MI100 or A100 80 GB version.  At the moment (2021), performance is scaling up faster on GPUs than CPUs."
+    "As a general sense of how fast prysm can be, multi-plane diffraction models can be run at about 2ms per 7-plane model per wavelength at a total size of 1024x1024 samples, using a Titan XP GPU.  The same model runs in about 50 ms per plane on a dual intel xeon 6248R platform.  The polychromatic model can be made to run at an aggregate time of 60 ms for 9 wavelengths on the GPU and 250 ms for CPU, utilizing all available cores with optimum tuning via threadpoolctl and a ThreadPoolExecutor."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -95,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
