--- a/docs/source/tutorials/First-Diffraction-Model.ipynb
+++ b/docs/source/tutorials/First-Diffraction-Model.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "We will construct what both Born & Wolf and Goodman call the Pupil function:\n",
     "\n",
-    "$$ P(\\xi, \\eta) = A(\\xi,\\eta) \\cdot \\exp\\left(-i \\tfrac{2\\pi}{\\lambda}  \\phi(\\xi,\\eta) \\right)$$\n",
+    "$$ P(\\xi, \\eta) = A(\\xi,\\eta) \\cdot \\exp\\left(i \\tfrac{2\\pi}{\\lambda}  \\phi(\\xi,\\eta) \\right)$$\n",
     "\n",
     "where $A$ is the amplitude function and does double duty as the limiting aperture, and $\\phi$ is the phase function containing the optical path error.\n",
     "\n",
@@ -26,9 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2-\n",
-    "\n",
     "import numpy as np\n",
     "\n",
     "from prysm.coordinates import make_xy_grid, cart_to_polar"
@@ -138,7 +135,9 @@
     "Now we want to calculate the PSF associated with this wavefront.  This calculation happens in two steps, the first is to compute the complex field in the plane of the PSF, and the second to compute the so-called \"intensity PSF\" or \"incoherent PSF\".  We have\n",
     "\n",
     "$$ E(x,y) = \\mathfrak{F} \\left[ P(\\xi,\\eta) \\right] $$\n",
+    "\n",
     "with $\\mathfrak{F}$ as the Fourier transform operator, and\n",
+    "\n",
     "$$ \\text{PSF}_\\text{inc}(x,y) = \\left|E(x,y)\\right|^2 $$"
    ]
   },
@@ -153,7 +152,7 @@
     "fno = 10\n",
     "psf_radius = 1.22*HeNe*fno\n",
     "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bilinear')"
+    "           clim=(1e5,3e9), interpolation='bicubic')"
    ]
   },
   {
@@ -175,7 +174,7 @@
     "E = wf.focus(100)\n",
     "psf = E.intensity\n",
     "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bilinear')"
+    "           clim=(1e5,3e9), interpolation='bicubic')"
    ]
   },
   {
@@ -197,7 +196,7 @@
     "E = wf.focus(100, Q=8)\n",
     "psf = E.intensity\n",
     "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bilinear')"
+    "           clim=(1e5,3e9), interpolation='bicubic')"
    ]
   },
   {
@@ -219,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
