--- a/docs/source/how-tos/Notable-Telescope-Apertures.ipynb
+++ b/docs/source/how-tos/Notable-Telescope-Apertures.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4040b6e4",
    "metadata": {},
    "source": [
     "# Notable Telescope Apertures\n",
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9371225c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +40,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f20faeae",
    "metadata": {},
    "source": [
     "## HST\n",
@@ -48,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d195831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1aeaefd",
    "metadata": {},
    "source": [
     "After shading the primary, we now compute the spider and pad obscurations:"
@@ -70,6 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2041e54b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +96,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d449f8ea",
    "metadata": {},
    "source": [
     "## JWST\n",
@@ -101,6 +108,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0625f825",
    "metadata": {},
    "source": [
     "JWST is a 2-ring segmented hexagonal design.  The central segment is missing, and there is a upside-down \"Y\" strut system to hold the secondary.  The segments are 1.32 m flat-to-flat, with 7 mm airgaps between.  We first paint the hexagons:"
@@ -109,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c352b409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +130,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2746ba1",
    "metadata": {},
    "source": [
     "And create the secondary struts, adding them to the mask:"
@@ -129,6 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa73c80f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +153,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1de1c196",
    "metadata": {},
    "source": [
     "## TMT\n",
@@ -152,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b66b9598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e55d9104",
    "metadata": {},
    "source": [
     "The inner ring and center segment should be excluded, and only 6 segments exist per horizontal side, nor should the most extreme \"columns\" be present.  The topmost segments are also not present.  Let's start with this as an exclusion list:"
@@ -180,6 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fdac3ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e63cb636",
    "metadata": {},
    "source": [
     "Next we can see that the diagonal \"corners\" are too large.  With the exclusion list below, we can create a TMT pupil, excepting struts and SM obscuration, in only two lines of code."
@@ -208,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d7050453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "448b2c48",
    "metadata": {},
    "source": [
     "The TMT secondary obscuration is of 3.65 m diameter, we add it and struts of 50 cm diameter that are equiangular:"
@@ -236,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b77022b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +265,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b8ec48e",
    "metadata": {},
    "source": [
     "Last of all are the six cables, of 20 mm diameter.  These are a bit tricky, but they have a meeting point at 90% the radius of the SM obscuration.  We will form them similar to the JWST and LUVOIR-A spiders, by shifting the coordinate grid and specifying the angle.  The angles are about 10$^\\circ$ from the radial normal."
@@ -254,6 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c514f1ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +303,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91710fc4",
    "metadata": {},
    "source": [
     "## LUVOIR-A\n",
@@ -292,6 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "38f93e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +329,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e214f2e",
    "metadata": {},
    "source": [
     "Note that we have discarded all of the other information from the composition process, which will be identical to the previous invocation.  We now add the spider, pretty much the same as JWST:"
@@ -314,6 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5a63a26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,16 +364,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e891f604",
    "metadata": {},
    "source": [
     "## LUVOIR-B\n",
     "\n",
-    "LUVOIR-B is a smaller, unobscured co-design to LUVOIR-A using the same segment architecture.  We follow a similar two-step shading process to find which segment IDs must be excluded:"
+    "LUVOIR-B is a smaller, unobscured co-design to LUVOIR-A.  We follow a similar two-step shading process to find which segment IDs must be excluded:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e6cc949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6e0baaf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +414,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4d84f5f9",
    "metadata": {},
    "source": [
     "## HabEx-A\n",
@@ -396,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2020f1df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,6 +439,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9f87b81",
    "metadata": {},
    "source": [
     "## HabEx-B\n",
@@ -419,12 +450,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe4f3c8f",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = make_xy_grid(512, diameter=6.5)\n",
     "\n",
-    "# vtov, centers, windows, local_coords, local_masks, segment_ids, mask = composite_hexagonal_aperture(3, 0.825, 0.007, x, y, exclude=[])\n",
     "cha = CompositeHexagonalAperture(x,y,3,.825,0.007)\n",
     "\n",
     "plt.imshow(cha.amp, origin='lower', cmap='gray', extent=[x.min(), x.max(), y.min(), y.max()])\n",
@@ -434,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -448,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
