--- a/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
+++ b/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
@@ -106,6 +106,7 @@
     "$$\n",
     "\\hat{f}_k = \\sum_{n=0}^{N-1} f_n \\cdot \\exp(-i 2\\pi/N k n)\n",
     "$$\n",
+    "\n",
     "where $k, n$ are the output and input sample numbers, and $K, N$ are the total number of output and input samples.  Because there is no normalization, as $N$ increases, the magnitude of $\\hat{f}$ will grow.  The same is not true for a growth in $K$.\n",
     "\n",
     "Further, we can see that the kernel of exp is precisely $\\cos - i \\sin$, which is the continuous Fourier mode.  The only difference between the definition of the FT and the DFT is in the discrete sum replacing an integral, and scaling of the kernel into the Nyquist bounds of $[-f_s/2, f_s]$, with $f_s = 1 / dx$.\n",
@@ -227,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
