--- a/docs/source/tutorials/First-Interferogram.ipynb
+++ b/docs/source/tutorials/First-Interferogram.ipynb
@@ -172,18 +172,11 @@
     "\n",
     "We will cover more topics in the [advanced](../how-tos/Advanced-Interferogram-Processing.ipynb) tutorial."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
