convolution: optimize the case where all tfs are not callables

--- a/docs/source/releases/v0.21.rst
+++ b/docs/source/releases/v0.21.rst
@@ -75,3 +75,5 @@ Performance Enhancements
 the thinfilm module's multilayer stack function has been vectorized, allowing arrays of thicknesses and indices to be used, instead of single points.  This enables the calculation to be batched over ranges of thicknesses, as e.g. for spatial distributions of thickness or thickness sweeps for design optimization.  For the 54x54 computation of the Roman Coronagraph Instrument's Hybrid Lyot occulter, the computation is 100x faster batched than elementwise.  Use the function in the same way, except when defining your stack instead of having scalar (n, d) for each layer use arbitrarily dimensional arrays.
 
 The performance Jacobi polynomial computations has been increased by 18%.  This cascades to performance of Chebyshev, Legendre, and Zernike polynomials.  The increase comes from replacing an outdated recurrence relation for one expressed in the standard form, which happens to be a bit faster.
+
+The convolvable, otf, and interferogram modules now properly utilize the fft backend instead of hard-coding numpy.  This makes the FFT operations roughly the number of cores in your system times faster (say, 5-50x) when utilizing the mkl_fft package as the fft backend.
