--- a/docs/source/releases/v0.21.rst
+++ b/docs/source/releases/v0.21.rst
@@ -22,7 +22,7 @@ Fixed sampling propagations now expose the shift argument, which was previously 
 
 The :class:`~prysm.propagation.Wavefront` type now has pad2d and crop methods, which provide more fluent access to the functions by the same name from the fttools package.
 
-Raytracing has been implemented using Spencer & Murty's icionic method.  Tracing multiple rays in parallel is supported, as are surfaced based on all of the polynomials implemented in prysm (sphere, conic, even asphere, Zernike, Qbfs, Qcon, Q2D, Hermite, Legendre, Chebyshev, ...).  Individual rays trace at a rate of about 5,000 ray-surfaces per second on a laptop CPU.  Roughly 2.5 million ray-surfaces per second are acheived on a laptop CPU with batched calculations and low complexity surfaces (conics, spheres).  More complex surface geometries, e.g. Q polynomials are slower.  Batch raytracing on GPU traces several billion ray-surfaces per second, exceeding the performance of Zemax and Code V.  There is no support for optimization, either now or planned.  Basic analysis routines are included -- spot diagrams, transverse ray aberrations, as well as paraxial image solves.  2D raytrace plots are supported.  The raytracing module will be expanded in the future and integration between it and the physical optics routines will be performed, enabling hybrid modeling with both rays and waves.
+Raytracing has been implemented using Spencer & Murty's iconic method.  Tracing multiple rays in parallel is supported, as are surfaced based on all of the polynomials implemented in prysm (sphere, conic, even asphere, Zernike, Qbfs, Qcon, Q2D, Hermite, Legendre, Chebyshev, ...).  Individual rays trace at a rate of about 5,000 ray-surfaces per second on a laptop CPU.  Roughly 2.5 million ray-surfaces per second are acheived on a laptop CPU with batched calculations and low complexity surfaces (conics, spheres).  More complex surface geometries, e.g. Q polynomials are slower.  Batch raytracing on GPU traces several billion ray-surfaces per second, exceeding the performance of Zemax and Code V.  There is no support for optimization, either now or planned.  Basic analysis routines are included -- spot diagrams, transverse ray aberrations, as well as paraxial image solves.  2D raytrace plots are supported.  The raytracing module will be expanded in the future and integration between it and the physical optics routines will be performed, enabling hybrid modeling with both rays and waves.
 
 The polynomials module has gained support for both types of Hermite polynomials, Dickson polynomials of the first and second kind, and Chebyshev polynomials of the third and Fourth kind:
 
