doc/polynomials: syntax cleanup

--- a/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
+++ b/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
@@ -138,7 +138,7 @@
     "prysm does not do this, and instead uses the fact that the radial polynomial is a Jacobi polynomial under a change-of-basis:\n",
     "\n",
     "$$\n",
-    "R_n^m (\\rho) = P_\\frac{n-m}{2}^\\left(0,|m|\\right)\\left(2\\rho^2 - 1\\right) \\tag{2}\n",
+    "R_n^m (\\rho) = P_\\frac{n-m}{2}^{\\left(0,|m|\\right)}\\left(2\\rho^2 - 1\\right) \\tag{2}\n",
     "$$\n",
     "\n",
     "And the jacobi polynomials can be computed using a recurrence relation:\n",
@@ -225,13 +225,13 @@
     "\n",
     "All four types of Chevyshev polynomials are supported.  They are just special cases of Jacobi polynomials.  The first and second kind are common:\n",
     "\n",
-    "$$ T(x) = \\text{cheby1}  \\equiv P_n^\\left(-0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,-0.5\\right)(1)$$\n",
-    "$$ U(x) = \\text{cheby2}  \\equiv (n+1) P_n^\\left(0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,0.5\\right)(1)$$\n",
+    "$$ T(x) = \\text{cheby1}  \\equiv P_n^{\\left(-0.5,-0.5\\right)}(x) \\quad / \\quad P_n^{\\left(-0.5,-0.5\\right)}(1)$$\n",
+    "$$ U(x) = \\text{cheby2}  \\equiv (n+1) P_n^{\\left(0.5,0.5\\right)}(x) \\quad / \\quad P_n^{\\left(0.5,0.5\\right)}(1)$$\n",
     "\n",
     "While the third and fourth kind are more obscure:\n",
     "\n",
-    "$$ V(x) = \\text{cheby3}  \\equiv P_n^\\left(-0.5,0.5\\right)(x) \\quad / \\quad P_n^\\left(-0.5,0.5\\right)(1)$$\n",
-    "$$ W(x) = \\text{cheby4}  \\equiv (2n+1) P_n^\\left(0.5,-0.5\\right)(x) \\quad / \\quad P_n^\\left(0.5,-0.5\\right)(1)$$"
+    "$$ V(x) = \\text{cheby3}  \\equiv P_n^{\\left(-0.5,0.5\\right)}(x) \\quad / \\quad P_n^{\\left(-0.5,0.5\\right)}(1)$$\n",
+    "$$ W(x) = \\text{cheby4}  \\equiv (2n+1) P_n^{\\left(0.5,-0.5\\right)}(x) \\quad / \\quad P_n^{\\left(0.5,-0.5\\right)}(1)$$"
    ]
   },
   {
@@ -317,11 +317,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Legendre\n",
+    "## Legendre\n",
     "\n",
     "These polynomials are just a special case of Jacobi polynomials:\n",
     "\n",
-    "$$ \\text{legendre} \\equiv P_n^\\left(0,0\\right)(x) $$\n",
+    "$$ \\text{legendre} \\equiv P_n^{\\left(0,0\\right)}(x) $$\n",
     "\n",
     "Usage follows from the [Chebyshev](#Chebyshev) exactly, except the functions are prefixed by `legendre`.  No plots here - they would be identical to those from the Jacobi section."
    ]
