doc: dep update, minor grammar fix

--- a/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
+++ b/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
@@ -41,7 +41,7 @@
     "- [Dickson](#Dickson)\n",
     "- [Qs](#Qs)\n",
     "\n",
-    "Note that all polynomial types allow evaluation for arbitrary order.  First partial derivatives can be computed using the format `{polynomial}_der` or `{polynomial}_der_sequence`.  1D polynomials are differentiated with respect to x.  2D polynomials do not yet support differentiation.  Differentiation is done analytically and does not rely on finite differences.\n",
+    "Note that all polynomial types allow evaluation for arbitrary order.  First partial derivatives can be computed using the format `{polynomial}_der` or `{polynomial}_der_sequence`.  1D polynomials are differentiated with respect to x.  2D polynomials are differentiated with respect to the coordiates they are defined over, e.g. rho, theta for Zernike and Q-type polynomials.  Differentiation is done analytically and does not rely on finite differences.\n",
     "\n",
     "## Hopkins\n",
     "\n",
