doc: update radiometrically correct modeling page to track changes to DFT scaling

--- a/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
+++ b/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
@@ -20,7 +20,7 @@
     "import numpy as np\n",
     "\n",
     "from prysm.coordinates import make_xy_grid, cart_to_polar\n",
-    "from prysm.geometry import truecircle, circle # anti-aliased, but circle would be fine too\n",
+    "from prysm.geometry import circle\n",
     "from prysm.fttools import pad2d, mdft\n",
     "from prysm.propagation import focus\n",
     "\n",
@@ -54,7 +54,7 @@
    "id": "color-state",
    "metadata": {},
    "source": [
-    "With no effort on the part of the user, prysm makes no attempt to scale outputs of operations in any physically meaningful way.  The `focus` function is an FFT propagation, and most FFT implementations (including the numpy one used here) do not divide the forward FFT by N, but do divide the reverse FFT by N, such that ifft(fft(x)) ~= x.  If we care about radiometry, we either would like the PSF to sum to 1, or for the peak of a diffraction limited PSF to be 1.  The latter simply requires dividing the aperture by its sum:"
+    "The `focus` function is an FFT propagation, and uses the `norm='unitary'` scaling, which preserves Parseval's theorem.  The satisfaction is in terms of complex E-field, but we are interested in unit intensity, so we must also divide by the square root of the sum of the aperture if we'd like the result to peak at 1.0:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aperture2 = aperture / aperture.sum()\n",
+    "aperture2 = aperture / np.sqrt(aperture.sum())\n",
     "inc_psf = abs(focus(aperture2, Q=2)) ** 2\n",
     "inc_psf.sum(), inc_psf.max()"
    ]
@@ -74,7 +74,7 @@
    "id": "nasty-casting",
    "metadata": {},
    "source": [
-    "To achieve the former, we simply need to make the propagation satisfy Parseval's theorem and make the aperture sum to 1.  We can actually achieve better efficiency by scaling the aperture, such that scaling the output is unnecessary.  By preconditioning the input, we can make FFT operating on the input satisfy Parseval's theorem.  The aperture is an amplitude, so it requires scaling by $\\sqrt{N}$ in addition to a similarly square-rooted change to what we did to get a peak of 1.  A minor complication is that the padding used to achieve `Q=2` increases $N$, so we'll pre-pad:"
+    "To achieve a peak of one, we need to scale the aperture in a particular way:"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "aperture3 = pad2d(aperture, Q=2)\n",
-    "aperture3 = aperture3 / (np.sqrt(aperture3.sum()) * np.sqrt(aperture3.size))\n",
+    "aperture3 = aperture3 * (2*np.sqrt(aperture.size)/aperture.sum())\n",
     "inc_psf = abs(focus(aperture3, Q=1)) ** 2\n",
     "inc_psf.sum(), inc_psf.max()"
    ]
@@ -95,37 +95,7 @@
    "id": "beb139d6",
    "metadata": {},
    "source": [
-    "The fixed sampling propagation requires a brief detour into the algorithm details to understand radiometric scaling.  First we define $\\hat{f}$ the fourier transform of $f$:\n",
-    "\n",
-    "$$\n",
-    "\\hat{f} = \\mathfrak{F}[{f}]\n",
-    "$$\n",
-    "\n",
-    "This is a continuous symbology.  The Discrete Fourier transform (DFT) is defined as:\n",
-    "\n",
-    "$$\n",
-    "\\hat{f}_k = \\sum_{n=0}^{N-1} f_n \\cdot \\exp(-i 2\\pi/N k n)\n",
-    "$$\n",
-    "\n",
-    "where $k, n$ are the output and input sample numbers, and $K, N$ are the total number of output and input samples.  Because there is no normalization, as $N$ increases, the magnitude of $\\hat{f}$ will grow.  The same is not true for a growth in $K$.\n",
-    "\n",
-    "Further, we can see that the kernel of exp is precisely $\\cos - i \\sin$, which is the continuous Fourier mode.  The only difference between the definition of the FT and the DFT is in the discrete sum replacing an integral, and scaling of the kernel into the Nyquist bounds of $[-f_s/2, f_s]$, with $f_s = 1 / dx$.\n",
-    "\n",
-    "When we take a zoomed DFT as done in `focus_fixed_sampling`, the value of $N$ is unchanged but the value of $K$ and the spatial frequency interval $d\\nu$ are changed.\n",
-    "\n",
-    "We can think of the outputs we may desire:\n",
-    "\n",
-    "1) Overlapping zoomed DFT and FFT samples to have the same magnitude\n",
-    "\n",
-    "2) The zoomed DFT output not to violate Parseval's theorem\n",
-    "\n",
-    "3) The DC frequency bin to have a value of 1.\n",
-    "\n",
-    "4) A zoomed DFT into the core of a PSF that is re-transformed to the aperture's domain in pupil space to lose as little energy as possible.\n",
-    "\n",
-    "Item (2) is not possible in general.  For a non bandlimited function such as the hard edged circular or square aperture, the PSF is an \"infinite impulse response\" (IIR) and computing it over a bandpass that does not extend to $f_s$ necessarily discards part of the signal and loses energy.  For bandlimited functions, (2) may be achieved.  Item (3) is always possible, and with no effort expended (1) is also achieved.  (4) is subject to the same provisions as mentioned for IIR systems, but can be implemented if we assume our functions are bandlimited, or the user accepts the loss of energy inherent in discarding some of the outer regions of the PSF.\n",
-    "\n",
-    "The zoomed DFT (or matrix triple product or matrix DFT) implemented in prysm is \"unnormalized\" in the same way the FFT backend is.  Within cases where the zoomed DFT _could_ have been computed as a combination of FFT and cropping operations, zoomed DFT ~= FFT, up to floating point rounding.  Observe:"
+    "Use of matrix DFTs (and chirp Z transforms) provides equal energy to FFTs, except when performing asymmetric transform pairs (one domain is smaller or larger than the other):"
    ]
   },
   {
@@ -171,7 +141,7 @@
    "id": "27939d75",
    "metadata": {},
    "source": [
-    "In this case, we lost about 0.03/5 ~= 0.6% of the energy.  If we go back to the pupil,"
+    "In this case, we lost about 0.03/5 ~= 0.6% of the energy.  If we go back to the pupil, a factor of 2 scaling will be needed due to the 2X crop used in the focal plane; 128 = 0.5 * 256, or 256 = 128 * 2"
    ]
   },
   {
@@ -181,12 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for the magic number 4, consider that the Q=2 FFT would produce 512x512 and the computed region\n",
-    "# is 128x128\n",
-    "\n",
     "field = mdft.dft2(aperture2, 2, 128)  # note that we are propagating the e field back to the pupil, not the PSF\n",
     "aperture_clone = mdft.idft2(field, 4, 256)\n",
-    "aperture_clone = aperture_clone.real / field.size / 4 / 4\n",
+    "aperture_clone = aperture_clone.real * 2\n",
     "plt.imshow(aperture_clone)"
    ]
   },
@@ -222,13 +189,16 @@
     "\n",
     "### In Summary\n",
     "\n",
-    "prysm's FFT propagations are not normalized.  Scaling input amplitudes by $\\sum(f)$ or by $\\sqrt{N}\\sqrt{\\sum(f)}$ will produce focused fields which have peaks of 1, or sums of 1.  The zoomed DFT computations follow precisely the same rules as the FFT computations, except for some caveats about non-bandlimited functions and energy loss."
+    "prysm's propagations are normalized such that,\n",
+    "\n",
+    "1.  If you desire a sum of 1, scale $f = f / \\sqrt{\\sum f}$\n",
+    "2.  If you desire a peak of one, scale $f = f \\cdot \\left( Q\\cdot \\sqrt{\\frac{N}{\\sum f}} \\right)$"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('prysm')",
    "language": "python",
    "name": "python3"
   },
@@ -243,6 +213,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5be6ce34c2868258f3cc626bd7cc451c1e001037b347cf86bc40933442f60bd7"
+   }
   }
  },
  "nbformat": 4,
