--- a/docs/source/tutorials/First-Diffraction-Model.ipynb
+++ b/docs/source/tutorials/First-Diffraction-Model.ipynb
@@ -120,7 +120,7 @@
     "from prysm.wavelengths import HeNe\n",
     "from prysm.propagation import Wavefront\n",
     "\n",
-    "phi100 = phi * 500\n",
+    "phi500 = phi * 500\n",
     "\n",
     "dx = xi[0,1]-xi[0,0]\n",
     "\n",
@@ -151,15 +151,14 @@
     "psf = E.intensity\n",
     "fno = 10\n",
     "psf_radius = 1.22*HeNe*fno\n",
-    "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bicubic')"
+    "psf.plot2d(xlim=psf_radius*10, power=1/3, cmap='gray', interpolation='bicubic')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The x and y ticks have units of microns.  We computed the airy radius and plotted +/- 5 airy radii, which we can see is true in the data.\n",
+    "The x and y ticks have units of microns.  We computed the airy radius and plotted +/- 10 airy radii.\n",
     "\n",
     "We can compare this unaberrated PSF to one which contains spherical aberration:"
    ]
@@ -170,11 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wf = Wavefront.from_amp_and_phase(A, phi100, HeNe, dx) # wf == P\n",
+    "wf = Wavefront.from_amp_and_phase(A, phi500, HeNe, dx) # wf == P\n",
     "E = wf.focus(100)\n",
     "psf = E.intensity\n",
-    "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bicubic')"
+    "psf.plot2d(xlim=psf_radius*10, power=1/3, cmap='gray', interpolation='bicubic')"
    ]
   },
   {
@@ -195,8 +193,7 @@
     "wf = Wavefront.from_amp_and_phase(A, None, HeNe, dx)\n",
     "E = wf.focus(100, Q=8)\n",
     "psf = E.intensity\n",
-    "psf.plot2d(xlim=psf_radius*5, log=True, cmap='gray',\n",
-    "           clim=(1e5,3e9), interpolation='bicubic')"
+    "psf.plot2d(xlim=psf_radius*10, power=1/3, cmap='gray', interpolation='bicubic')"
    ]
   },
   {
@@ -218,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.12 ('prysm')",
    "language": "python",
    "name": "python3"
   },
@@ -233,6 +230,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5be6ce34c2868258f3cc626bd7cc451c1e001037b347cf86bc40933442f60bd7"
+   }
   }
  },
  "nbformat": 4,
